syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.techoverflow.publicapis";
option java_outer_classname = "PublicApisProto";
option objc_class_prefix = "HLW";

package publicapis;

service PublicApis {
  // Sends a greeting
  rpc getApiList (PublicApisRequest) returns (PublicApisResponse) {}
}

message PublicApisRequest {

}

message PublicApisResponse {
  int32 count = 1;
  message Entry {
    string API = 1;
    string Description = 2;
    string Auth = 3;
    bool HTTPS = 4;
    string Cors = 5;
    string Link = 6;
    string Category = 7;
  }

  repeated Entry entries = 2;
}
